--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Version: 1.0.0
 Requires at least: 5.0
 Requires PHP: 5.6
 Tested up to: 5.6
-Description: <a href="http://alx.media/themes/folias/">Folias</a> is a flexible personal blog theme with plenty of options. It is optimized for all devices and built to work with blocks. You can pick accent colors, set sidebar to the left or right and choose website max-width with a few clicks. Demo: http://demo.alx.media/x/?theme=Folias
+Description: <a href="http://alx.media/themes/folias/">Folias</a> is a flexible portfolio theme with plenty of options. It is optimized for all devices and built to work with blocks. You can pick sidebars and item colors, set sidebar to the left or right and choose website max-width with a few clicks. Demo: http://demo.alx.media/x/?theme=Folias
 Author: Alexander Agnarson
 Author URI: http://alx.media
 Tags: blog, one-column, two-columns, right-sidebar, left-sidebar, custom-colors, custom-menu, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, custom-logo, custom-header, custom-background
