--- a/style.css
+++ b/style.css
@@ -793,7 +793,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu:not(.mobile) .menu { position: relative; text-transform: uppercase;  }
 .nav-menu:not(.mobile) .menu ul { font-size: 14px; opacity: 0; padding: 10px 0; position: absolute; top: calc(100% + 20px); transition: opacity 0.15s linear, transform 0.15s linear, right 0s 0.15s; transform: translateY(6px); z-index: 3; }
 .nav-menu:not(.mobile) .menu ul li { position: relative; }
-.nav-menu:not(.mobile) .menu ul a { display: block; padding: 7px 20px; transition: background-color 0.15s linear; width: 100%; }
+.nav-menu:not(.mobile) .menu ul a { display: block; padding: 9px 20px; transition: background-color 0.15s linear; width: 100%; }
 .nav-menu:not(.mobile) .menu li.menu-item-has-children.focus > ul {	min-width: 200px; max-width: 200px; max-height: 300vh; overflow: visible; opacity: 1; transform: translateY(0); transition: opacity 0.15s linear, transform 0.15s linear; }
 .nav-menu:not(.mobile) .menu li.menu-item-has-children.focus > ul:focus-within { opacity: 1!important; }
 .nav-menu:not(.mobile) .menu li ul.sub-menu:not(.active) { opacity: 0; }
@@ -843,6 +843,8 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu:not(.mobile) a { color: #999; }
 .nav-menu:not(.mobile) a:hover { color: #fff; }
 .nav-menu:not(.mobile) ul ul a:hover { color: #000; }
+.nav-menu:not(.mobile) ul ul > li { border-bottom: 1px solid #ddd; }
+.nav-menu:not(.mobile) ul ul > li:last-child { border-bottom: 0; }
 .nav-menu:not(.mobile) ul ul > li:hover > span { background: #fff; }
 .nav-menu:not(.mobile) ul ul a { color: #333; }
 .nav-menu:not(.mobile) button { background: none; color: #666; padding: 0 4px; margin-left: 2px; border-radius: 4px; }
