--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
 Theme Name: Folias
 Theme URI: http://alx.media/themes/folias/
-Version: 1.0.8
+Version: 1.0.9
 Requires at least: 5.0
 Requires PHP: 5.6
 Tested up to: 6.0
-Description: <a href="http://alx.media/themes/folias/">Folias</a> is a flexible portfolio theme with plenty of options. It is optimized for all devices and built to work with blocks. You can pick sidebars and item colors, set sidebar to the left or right and choose website max-width with a few clicks. Demo: http://demo.alx.media/x/?theme=Folias
+Description: <a href="http://alx.media/themes/folias/">Folias</a> is a flexible portfolio theme with plenty of options. It is optimized for all devices. You can pick sidebars and item colors, set sidebar to the left or right and choose website max-width with a few clicks. Demo: http://demo.alx.media/x/?theme=Folias
 Author: Alexander Agnarson
 Author URI: http://alx.media
-Tags: blog, one-column, two-columns, right-sidebar, left-sidebar, custom-colors, custom-menu, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, custom-logo, custom-header, custom-background
+Tags: portfolio, photography, blog, one-column, two-columns, right-sidebar, left-sidebar, custom-colors, custom-menu, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, custom-logo, custom-header, custom-background, footer-widgets
 Text Domain: folias
 
 	Copyright: (c) 2018 Alexander "Alx" Agnarson
@@ -219,7 +219,7 @@ input, textarea, button, select, label { font-family: inherit; }
 /*  base : entry
 /* ------------------------------------ */
 .entry { font-size: 19px; line-height: 1.6em; }
-.entry a { color: #fff; }
+.entry a { color: #fff; text-decoration: underline; }
 .entry a:hover { color: #999; }
 .entry hr { border: 0; background: #444; height: 2px; width: 30%; margin: 40px auto; }
 .entry p,
@@ -738,7 +738,9 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .toggle-search .svg-icon { fill: #fff; margin: 0 auto; }
 .toggle-search #svg-close { display: none; }
 .toggle-search.active #svg-search { display: none; }
-.toggle-search.active #svg-close { display: block; }
+.toggle-search.active #svg-close { display: block; fill: rgba(255,255,255,0.5); }
+.toggle-search:focus #svg-search { fill: rgba(255,255,255,0.7); }
+.toggle-search:focus #svg-close { fill: #fff; }
 
 
 /* ------------------------------------------------------------------------- *
@@ -835,6 +837,8 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu.mobile.toggled > div > ul.menu ul.sub-menu { visibility: hidden; transition: all 0.3s ease; }
 .nav-menu.mobile.toggled > div > ul.menu,
 .nav-menu.mobile.toggled > div > ul.menu ul.sub-menu.active { visibility: visible; }
+.nav-menu.mobile button:focus,
+.menu-toggle:focus { background: rgba(255,255,255,0.04); }
 
 /* menu styling */
 .nav-menu a { color: #fff; }
@@ -1540,6 +1544,6 @@ li #reply-title { font-size: 0; margin: 0!important; padding: 0; height: 0; bord
 /* ------------------------------------------------------------------------- */
 /* Text meant only for screen readers. */
 .screen-reader-text{ border: 0; clip: rect(1px, 1px, 1px, 1px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute!important; width: 1px; word-wrap: normal!important; }
-.screen-reader-text:focus { background-color: #fff; border-radius: 3px; box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1); clip: auto!important; clip-path: none; color: #333; display: block; font-size: 14px; font-size: 0.875rem; font-weight: bold; height: auto; right: 5px; line-height: normal; padding: 15px 23px 14px; text-decoration: none; top: 5px; width: auto; z-index: 100000; }
+.screen-reader-text:focus { background-color: #fff; border-radius: 3px; box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1); clip: auto!important; clip-path: none; color: #333; display: block; font-size: 14px; font-size: 0.875rem; font-weight: bold; height: auto; left: auto; right: 5px; line-height: normal; padding: 15px 23px 14px; text-decoration: none; top: 5px; width: auto; z-index: 100000; }
 /* Do not show the outline on the skip link target. */
 #page[tabindex="-1"]:focus{ outline: 0; }
