--- a/responsive.css
+++ b/responsive.css
@@ -101,6 +101,11 @@
 	.site-title { padding: 10px 0; margin: 0; width: 100%; float: none; line-height: 50px; }
 	.site-title a { text-align: center; }
 	
+	.s2 { float: left; width: 100%; }
+	.toggle-search { background: transparent; border: 0; padding-top: 11px; padding-bottom: 11px; display: block; position: absolute; left: 0; bottom: -52px; z-index: 3; }
+	.toggle-search.active { background: transparent; height: 50px; padding-top: 11px; padding-bottom: 11px; }
+	.search-expand { background: transparent; width: 220px; padding: 0; top: auto; bottom: -44px; }
+	
 	/* footer */
 	#nav-footer.nav-container { padding: 0; }
 	#footer-bottom .pad { padding-top: 50px; padding-bottom: 40px; }
