--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Folias
-Theme URI: http://alx.media/themes/folias/
+Theme URI: https://agnarson.com/wpthemes/folias/
 Version: 1.1.2
 Requires at least: 5.0
 Requires PHP: 5.6
 Tested up to: 6.0
-Description: <a href="http://alx.media/themes/folias/">Folias</a> is a flexible portfolio theme with plenty of options. It is optimized for all devices. You can pick sidebars and item colors, set sidebar to the left or right and choose website max-width with a few clicks. Demo: http://demo.alx.media/x/?theme=Folias
+Description: <a href="https://agnarson.com/wpthemes/folias/">Folias</a> is a flexible portfolio theme with plenty of options. It is optimized for all devices. You can pick sidebars and item colors, set sidebar to the left or right and choose website max-width with a few clicks. Demo: https://demo.agnarson.com/?theme=Folias
 Author: Alexander Agnarson
-Author URI: http://alx.media
+Author URI: https://agnarson.com
 Tags: portfolio, photography, blog, one-column, two-columns, right-sidebar, left-sidebar, custom-colors, custom-menu, featured-images, flexible-header, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, custom-logo, custom-header, custom-background, footer-widgets
 Text Domain: folias
 
